src/snapshots/droid_tui__regression__visual_switch_value_rendering_snapshot@switch_value_mono_120.snap
---
source: src/regression.rs
expression: ansi
---
┌──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│                                                  DROID: switch_value                                                 │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌────┐
│ Fad…
▯    │
▯    │
▯    │
▮    │
▮    │
▮    │
▮    │
│    │
│    │
◉▣   │
……   │
│    │
│    │
│    │
│    │
│    │
│    │
│    │
│    │
│    │
│    │
└────┘
┌──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│No patch loaded. Press 'l' to load. | Renders degraded at 120 cols — use ≥ 50 cols or reduce scale | Scale: 1.0 | Orie│
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
