src/snapshots/droid_tui__regression__visual_switch_value_rendering_snapshot@switch_value_mono_80.snap
---
source: src/regression.rs
expression: ansi
---
┌──────────────────────────────────────────────────────────────────────────────┐
│                              DROID: switch_value                             │
└──────────────────────────────────────────────────────────────────────────────┘
┌────┐
│ Fad…
▯    │
▯    │
▯    │
▮    │
▮    │
▮    │
▮    │
│    │
│    │
◉▣   │
……   │
│    │
│    │
│    │
│    │
│    │
│    │
│    │
│    │
│    │
│    │
└────┘
┌──────────────────────────────────────────────────────────────────────────────┐
│Loaded switch_value | Renders degraded at 80 cols — use ≥ 50 cols or reduce sc│
└──────────────────────────────────────────────────────────────────────────────┘
