src/snapshots/droid_tui__regression__visual_theming_shift_and_mono_snapshot@led_shift1_classic_100.snap
---
source: src/regression.rs
expression: ansi
---
┌──────────────────────────────────────────────────────────────────────────────────────────────────┐
│                                         DROID: led_pairs                                         │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
┌──┐┌──┐
◉ ◉…◉ ◉…
0%0%0%0%
│  ││  │
│  ││  │
│  ││  │
│  ││  │
│  ││  │
│  ││  │
│  ││  │
│  ││  │
│○○│○○○│
│……│… …│
│  ││  │
│  ││  │
│○○│○ ○│
│○○│…○○│
│  ││  │
│  ││  │
│  ││  │
│○○│○○○│
│……│… …│
│  ││  │
│  ││  │
│○○│○ ○│
│○○│…○○│
│  ││  │
│  ││  │
│  ││  │
│  ││  │
│  ││  │
│  ││  │
│  ││  │
└──┘└──┘
┌──────────────────────────────────────────────────────────────────────────────────────────────────┐
│No patch loaded. Press 'l' to load. | SHIFT 1 ACTIVE | Renders degraded at 100 cols — use ≥ 292 co│
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
