src/snapshots/droid_tui__regression__visual_theming_shift_and_mono_snapshot@led_shift1_mono_100.snap
---
source: src/regression.rs
expression: ansi
---
┌──────────────────────────────────────────────────────────────────────────────────────────────────┐
│                                         DROID: led_pairs                                         │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
┌──┐┌──┐
◉ P…  ◉…
0% ││ 0%
│  ││  │
│  ││  │
│  ││  │
│  ││  │
│  ││  │
│  ││  │
│  ││  │
│  ││  │
│  ││ ○│
│  ││  │
│  ││  │
│  ││  │
│  │○ ○│
│  │… ○│
│  ││  │
│  ││  │
│  ││  │
│  │○○○│
│  │… …│
│  ││  │
│  ││  │
│  │○ ○│
│  │…○○│
│  ││  │
│  ││  │
│  ││  │
│  ││  │
│  ││  │
│  ││  │
│  ││  │
└──┘└──┘
┌──────────────────────────────────────────────────────────────────────────────────────────────────┐
│Loaded led_pairs | SHIFT 1 ACTIVE | Renders degraded at 100 cols — use ≥ 260 cols or reduce scale │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
