src/snapshots/droid_tui__regression__visual_theming_shift_and_mono_snapshot@led_shift1_terminal_100.snap
---
source: src/regression.rs
expression: ansi
---
┌──────────────────────────────────────────────────────────────────────────────────────────────────┐
│                                         DROID: led_pairs                                         │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
┌ Pot [SHIFT 1] ───────────────────────────────────────────────────────────────────────────────────┐
│┌ ○ Button B1.1┐  ○ Button B1.2 ┌ ◉ Pot P1.1 ──┐   ○ LED L1.2     ○ Button B1.3   ○ Button B1.4   │
││     OFF ○    │       OFF      │     0% ○     │       OFF             OFF             OFF        │
│└──────────────┘                └──────────────┘                                                  │
│   ○ LED L1.4     ○ Button B1.5    ○ LED L1.5     ○ Button B1.6    ○ LED L1.6     ○ Button B1.7   │
│       OFF             OFF             OFF             OFF             OFF             OFF        │
│                                                                                                  │
│   ○ LED L1.7     ○ Button B1.8    ○ LED L1.8      ◉ Pot P1.2                                     │
│       OFF             OFF             OFF             0%                                         │
│                                                                                                  │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘























┌──────────────────────────────────────────────────────────────────────────────────────────────────┐
│No patch loaded. Press 'l' to load. | SHIFT 1 ACTIVE | Renders degraded at 100 cols — use ≥ 258 co│
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
