src/snapshots/droid_tui__regression__visual_theming_shift_and_mono_snapshot@shift1_classic_100.snap
---
source: src/regression.rs
assertion_line: 2317
expression: ansi
---
┌──────────────────────────────────────────────────────────────────────────────────────────────────┐
│                                         DROID: arpeggio1                                         │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
┌──┐┌────┐┐
◉ ◉…  CV …
0%0%│    ││
│  ││    ││
│  ││    ││
│  ││    ││
│  ││    ││
│  ││    ││
│  ││    ││
│  ││    ││
│  ││    ││
│○○││    ││
│……││    ││
│  ││    ││
│  ││    ││
│○○│◀  ▶ ││
│○○│…  … ││
│  ││    ││
│  ││    ││
│  ││    ││
│○○││    ││
│……││    ││
│  ││    ││
└──┘└──▶─┘┘
┌──────────────────────────────────────────────────────────────────────────────────────────────────┐
│No patch loaded. Press 'l' to load. | SHIFT 1 ACTIVE | Renders degraded at 100 cols — use ≥ 228 co│
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
