src/snapshots/droid_tui__regression__visual_theming_shift_and_mono_snapshot@shift1_mono_100.snap
---
source: src/regression.rs
expression: ansi
---
┌──────────────────────────────────────────────────────────────────────────────────────────────────┐
│                                         DROID: arpeggio1                                         │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
┌ P2B8 [SHIFT 1] ──────────────────────────────────────────────────────────────────────────────────┐
│┌ ○ [DIR] Dire…┐┌ ○ [PNG] Enab…┐┌ ○ [FLY] Swit…┐┌ ○ [OCT] Set …┐┌ ○ [DRP] When…┐┌ ○ [STA] Enfo…┐  │
││     OFF ○    ││     OFF ○    ││     OFF ○    ││     OFF ○    ││     OFF ○    ││     OFF ○    │  │
│└──────────────┘└──────────────┘└──────────────┘└──────────────┘└──────────────┘└──────────────┘  │
│┌ ○ [TRI] Swit…┐┌ ○ [MIN] Swit…┐◉ [SPE] Speed o…◉ [PAT] Arpeggi…                                  │
││     OFF ○    ││     OFF ○    │       0%              0%                                         │
│└──────────────┘└──────────────┘                                                                  │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
┌ CV I/O [SHIFT 1] ────────────────────────────────────────────────────────────────────────────────┐
│← [ENV] envelope→ [CLK] optiona…← [CLK] interna…← [V/O] pitch (…                                  │
│     CV OUT           CV IN          CV OUT          CV OUT                                       │
│                                                                                                  │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘











┌──────────────────────────────────────────────────────────────────────────────────────────────────┐
│No patch loaded. Press 'l' to load. | SHIFT 1 ACTIVE | Renders degraded at 100 cols — use ≥ 228 co│
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
