src/snapshots/droid_tui__regression__visual_ui_review_fronts_snapshot@ui_review_all_uncovered_mono_100.snap
---
source: src/regression.rs
expression: ansi
---
┌──────────────────────────────────────────────────────────────────────────────────────────────────┐
│                                       DROID: all_uncovered                                       │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
┌──┐┌───┐┌───┐
◉ ◉…  Db…  CV…
0%0%│   ││   │
│  ││   ││   │
│  ││   ││   │
│  ││   ││   │
│  ││   │▶   │
│  ││   │…   │
│  ││ ○ ││   │
│  ││ … ││   │
│  ││   ││   │
│  ││   ││   │
│  ││   ││   │
│  ││   ││   │
│○○││  ◉││   │
│… ││  …││   │
│  ││   ││   │
│  ││   ││   │
│  ││   ││   │
│  ││   ││   │
│  ││   ││   │
│  ││   ││   │
│  ││   ││   │
│  ││   ││   │
│  ││   ││   │
│  ││   ││   │
│  ││   ││   │
│  ││   ││   │
│  ││   ││   │
│  ││   ││   │
│  ││   ││   │
│  ││   ││   │
│  ││   ││   │
│  ││   ││   │
│  ││   ││   │
└──┘└───┘└───┘








┌──────────────────────────────────────────────────────────────────────────────────────────────────┐
│No patch loaded. Press 'l' to load. | Renders degraded at 100 cols — use ≥ 134 cols or reduce scal│
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
